[gd_scene load_steps=4 format=2]

[ext_resource path="res://visuals/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
margin_left = 6.15912
margin_top = 7.1591
margin_right = -11.8409
margin_bottom = 46.1591
custom_constants/hseparation = 20
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 61.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Delta"
align = 1
valign = 1

[node name="Delta" type="Label" parent="GridContainer"]
margin_left = 81.0
margin_right = 139.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "0.322"
align = 1
valign = 1

[node name="Title" type="Label" parent="GridContainer"]
margin_left = 159.0
margin_right = 649.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.423529, 0.678431, 0.901961, 1 )
text = "Slow down simple"
align = 1
valign = 1

[node name="Label3" type="Label" parent="GridContainer"]
margin_left = 669.0
margin_right = 716.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Time"
align = 1
valign = 1

[node name="Time" type="Label" parent="GridContainer"]
margin_left = 736.0
margin_right = 801.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "10000"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GridContainer"]
margin_left = 821.0
margin_right = 954.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Slow factor"
align = 1
valign = 1

[node name="SlowFactor" type="Label" parent="GridContainer"]
margin_left = 974.0
margin_right = 1006.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "1.0"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowBtn" type="Button" parent="HBoxContainer"]
margin_left = 330.0
margin_right = 459.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "SLOW DOWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBtn" type="Button" parent="HBoxContainer"]
margin_left = 463.0
margin_right = 694.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "slow down custom >"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="HBoxContainer/SlowBtn" to="." method="_on_SlowBtn_toggled"]
[connection signal="pressed" from="HBoxContainer/NextBtn" to="." method="_on_NextBtn_pressed"]
